--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -10,7 +10,7 @@ html{
 body {
 	margin: 0;
 	color: #4B4B4B;
-	font-family: source-sans-pro;
+	font-family: Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 1em;
